--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <a href="http://www.google.com">Google</a>
     </main>
 
-    <a href="http://www.yahoo.com">Yahoo</a>
+    <a href="http://www.duckduckgo.com">Duck Duck Go</a>
 
 
   </body>
