--- a/index.html
+++ b/index.html
@@ -6,12 +6,23 @@
     <link rel="stylesheet" href="main.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
+
     <main>
       <a href="http://www.google.com">Google</a>
+      <div>
+        <a href="http://www.facebook.com">Facebook</a>
+      </div>
     </main>
 
     <a href="http://www.duckduckgo.com">Duck Duck Go</a>
 
+    <div id="example-parent">
+      <div class="example-child">
+        <a href="http://www.reddit.com" class="example-grandchild" id="reddit">Reddit </a>
+      </div>
+    </div>
+
+    <div class="example-grandchild">Text goes here</div>
 
   </body>
 </html>
