More pseudo selectors

--- a/index.html
+++ b/index.html
@@ -8,21 +8,12 @@
   <body>
 
     <main>
+      <a href="http://www.google.com">Google</a>    <a href="http://www.google.com">Google</a>
       <a href="http://www.google.com">Google</a>
-      <div>
-        <a href="http://www.facebook.com">Facebook</a>
-      </div>
+      <a href="http://www.google.com">Google</a>
+      <a href="http://www.google.com">Google</a>
+      <a href="http://www.google.com">Google</a>
     </main>
-
-    <a href="http://www.duckduckgo.com">Duck Duck Go</a>
-
-    <div id="example-parent">
-      <div class="example-child">
-        <a href="http://www.reddit.com" class="example-grandchild" id="reddit">Reddit </a>
-      </div>
-    </div>
-
-    <div class="example-grandchild">Text goes here</div>
 
   </body>
 </html>
