--- a/index.html
+++ b/index.html
@@ -1,4 +1,26 @@
+
 <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Wednesday</title>
+    <link rel="stylesheet" href="main.css" media="screen" title="no title" charset="utf-8">
+  </head>
+  <body>
+
+    <div class="image-number">115</div>
+
+    <p class="dropcap">Bitchin Words</p>
+
+  </body>
+</html>
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -16,4 +38,4 @@
     </main>
 
   </body>
-</html>
+</html> -->
