--- a/index.html
+++ b/index.html
@@ -8,34 +8,9 @@
   </head>
   <body>
 
-    <div class="image-number">115</div>
-
-    <p class="dropcap">Bitchin Words</p>
-
+    <div>
+      <main></main>
+        <article></article>
+    </div>
   </body>
 </html>
-
-
-
-
-
-
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Wednesday</title>
-    <link rel="stylesheet" href="main.css" media="screen" title="no title" charset="utf-8">
-  </head>
-  <body>
-
-    <main>
-      <a href="http://www.google.com">Google</a>    <a href="http://www.google.com">Google</a>
-      <a href="http://www.google.com">Google</a>
-      <a href="http://www.google.com">Google</a>
-      <a href="http://www.google.com">Google</a>
-      <a href="http://www.google.com">Google</a>
-    </main>
-
-  </body>
-</html> -->
