Made guy, placement.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="main.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-
     <div>
-      <main></main>
+      <main>
         <article></article>
+      </main>
     </div>
   </body>
 </html>
